AC_INIT(README, 0.01)
AC_LANG(C++)

AC_CONFIG_HEADERS([./src/config.h])
AC_CONFIG_FILES([./src/Makefile ./tools/Makefile])

AC_PROG_CXX([g++ clang++ c++])

AX_CXX_COMPILE_STDCXX_11(,mandatory)
AX_GCC_ARCHFLAG(no, [CXXFLAGS="$CXXFLAGS $ax_cv_gcc_archflag"],[])

AX_BOOST_BASE()
AX_BOOST_ASIO()
AX_BOOST_LOCALE()
AX_BOOST_REGEX()
AX_BOOST_PROGRAM_OPTIONS()
AX_BOOST_LOG()
AX_BOOST_LOG_SETUP()
AX_BOOST_THREAD()

AC_OUTPUT()
